--- a/demo1/package.json
+++ b/demo1/package.json
@@ -7,17 +7,34 @@
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.6",
+    "@mui/x-data-grid": "^5.17.4",
+    "@react-hook/debounce": "^4.0.0",
+    "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/faker": "5.5.3",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.60",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "@types/react-router-dom": "^5.3.3",
+    "axios": "^0.27.2",
+    "chart.js": "^3.9.1",
+    "faker": "5.5.3",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.36.1",
+    "react-moment": "^1.1.2",
+    "react-number-format": "^5.0.0",
+    "react-redux": "^8.0.4",
+    "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
     "typescript": "^4.8.3",
+    "url-join": "^5.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
