--- a/demo1/package.json
+++ b/demo1/package.json
@@ -35,13 +35,14 @@
     "redux": "^4.2.0",
     "typescript": "^4.8.3",
     "url-join": "^5.0.0",
-    "web-vitals": "^2.1.4"
+  "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "push": "git add . && git commit -m '1234' && git push"
   },
   "eslintConfig": {
     "extends": [
