--- a/demo1/package.json
+++ b/demo1/package.json
@@ -22,6 +22,7 @@
     "@types/react-router-dom": "^5.3.3",
     "axios": "^0.27.2",
     "chart.js": "^3.9.1",
+    "express": "^4.18.1",
     "faker": "5.5.3",
     "moment": "^2.29.4",
     "react": "^18.2.0",
