--- a/demo1/.vscode/tasks.json
+++ b/demo1/.vscode/tasks.json
@@ -1,21 +1,12 @@
 {
+  // See https://go.microsoft.com/fwlink/?LinkId=733558
+  // for the documentation about the tasks.json format
   "version": "2.0.0",
   "tasks": [
     {
-      "type": "npm",
-      "script": "build",
-      "group": "build",
-      "problemMatcher": [],
-      "label": "npm: build",
-      "detail": "react-scripts build"
-    },
-    {
-      "type": "npm",
-      "script": "push",
-      "group": "build",
-      "problemMatcher": [],
-      "label": "npm: build",
-      "detail": "react-scripts build"
+      "label": "pushall",
+      "type": "shell",
+      "command": "git add . && git commit -m '1234' && git push"
     }
   ]
 }
