--- a/demo1/.vscode/tasks.json
+++ b/demo1/.vscode/tasks.json
@@ -6,8 +6,7 @@
     {
       "label": "pushall",
       "type": "shell",
-      "command": "git add . && git commit -m '1234' && git push",
-      "problemMatcher": []
+      "command": "git add . && git commit -m '1234' && git push"
     }
   ]
 }
