--- a/demo1/backend-typeorm/package.json
+++ b/demo1/backend-typeorm/package.json
@@ -17,6 +17,7 @@
    },
    "scripts": {
       "start": "ts-node src/index.ts",
+      "dev": "ts-node src/index.ts",
       "typeorm": "typeorm-ts-node-commonjs"
    }
 }
