--- a/demo1/backend-typeorm/package.json
+++ b/demo1/backend-typeorm/package.json
@@ -16,8 +16,7 @@
       "body-parser": "^1.19.1"
    },
    "scripts": {
-      "start": "ts-node src/index.ts",
-      "dev": "ts-node src/index.ts",
+      "start": "ts-node-dev src/index.ts",
       "typeorm": "typeorm-ts-node-commonjs"
    }
 }
