--- a/demo1/backend-typeorm/package.json
+++ b/demo1/backend-typeorm/package.json
@@ -28,6 +28,7 @@
    },
    "scripts": {
       "start": "ROOT_PATH=/Users/chaiyasittayabovorn/Desktop/cm-react-mern-2022/demo1/backend-typeorm ts-node-dev src/index.ts",
+      "win_start": "SET ROOT_PATH=/Users/chaiyasittayabovorn/Desktop~1/cm-react-mern-2022/demo1/backend-typeorm & ts-node-dev src/index.ts",
       "typeorm": "typeorm-ts-node-commonjs"
    }
 }
